<resources>
    <string name="app_name">편준생</string>
    <string name="comeback">뒤로가기</string>


    <string name="TF_title">편준생</string>
    <string name="TF_subtitle">편입 성적 자기 관리 어플</string>
    <string name="TF_insertText">성적 입력</string>
    <string name="TF_checkText">성적 확인</string>

    <string name="insert_title">성적 입력</string>
    <string name="exam_title">시험 이름</string>
    <string name="exam_title_insert">시험 이름을 입력해 주세요.</string>
    <string name="exam_score">점수</string>
    <string name="exam_score_insert">점수를 입력해 주세요.</string>
    <string name="exam_percent">백분율</string>
    <string name="exam_percent_insert">백분율을 입력해 주세요.</string>
    <string name="exam_insert">성적 추가</string>

    <string name="check_title">성적 확인</string>
    <string name="check_analyze">성적 분석</string>
    <string name="alert">성적을 길게 누르면 삭제가 가능합니다.</string>


    <string name="short_example"> 짧은 문장 예시입니다.</string>
    <string name="long_example">ㅁㄴㅇㄹ</string>

    <string name="helper_title">사용법 및 유의사항</string>
    <string name="helper_text">해당 어플은 편입준비생 중 모의고사 진행 후 성적에 대한 상담이 어려운 분들을 위해 제작되었습니다.\n\n 성적 추가로 성적을 5개 이상 입력하시면 이를 바탕으로 성적을 분석합니다.\n\n 단, 편입시험에 절대적이라는 것은 없으며 본인이 어느 대학, 어느 학과에 원서를 쓰고 경쟁하냐에 따라 크게 갈리는 시험입니다.\n 본인의 성적이 낮더라도 얼마든지 상황에 따라 합격이 가능하며 해당 분석은 참고용 정도로만 생각하고 이용해주시기 바랍니다.\n\n Ver. 1.0</string>


</resources>