<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTFActivity">

    <TextView
        android:id="@+id/insert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_title"
        android:textAppearance="@style/TF_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        />

    <TextView
        android:id="@+id/exam_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exam_title"
        android:textAppearance="@style/insert_exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_title" />

    <EditText
        android:id="@+id/exam_title_insert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/exam_title_insert"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textAppearance="@style/exam_add"
        app:layout_constraintTop_toBottomOf="@+id/exam_title"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/exam_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exam_score"
        android:textAppearance="@style/insert_exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_title_insert" />

    <EditText
        android:id="@+id/exam_score_insert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/exam_score_insert"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textAppearance="@style/exam_add"
        app:layout_constraintTop_toBottomOf="@+id/exam_score"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/exam_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exam_percent"
        android:textAppearance="@style/insert_exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exam_score_insert" />

    <EditText
        android:id="@+id/exam_percent_insert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/exam_percent_insert"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textAppearance="@style/exam_add"
        app:layout_constraintTop_toBottomOf="@+id/exam_percent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_exam_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exam_insert"
        android:textAppearance="@style/btn"
        app:layout_constraintTop_toBottomOf="@id/exam_percent_insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_insert_back"
        />

    <Button
        android:id="@+id/btn_insert_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comeback"
        android:textAppearance="@style/btn"
        app:layout_constraintTop_toBottomOf="@id/exam_percent_insert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_exam_insert"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>