<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelperActivity">

  <TextView
    android:id="@+id/helper_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/helper_title"
    android:textAppearance="@style/helper_title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.1"
    />

  <TextView
      android:id="@+id/helper_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/yellow"
      android:text="@string/helper_text"
      android:textSize="21sp"
      android:gravity="center"
      android:padding="10dp"
      android:layout_margin="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/helper_title"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintVertical_bias="0.1"
      />
  <Button
      android:id="@+id/btn_helper_back"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/comeback"
      android:textAppearance="@style/btn"
      app:layout_constraintTop_toBottomOf="@id/helper_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
</androidx.constraintlayout.widget.ConstraintLayout>